--- a/css/main.css
+++ b/css/main.css
@@ -7,3 +7,13 @@ body {
 body h1 {
     margin: 0;
 }
+
+body header nav a {
+     color: #c66204;
+   text-decoration: none;
+}
+
+body header nav a.active {
+    color: #b3ea70;
+  text-decoration: none;
+}
