--- a/css/main.css
+++ b/css/main.css
@@ -6,10 +6,11 @@ body {
 
 body h1 {
     margin: 0;
+    color: rgb(215, 221, 227);
 }
 
 body header nav a {
-     color: #c66204;
+     color: #f7b00b;
    text-decoration: none;
 }
 
@@ -17,3 +18,17 @@ body header nav a.active {
     color: #b3ea70;
   text-decoration: none;
 }
+h2 {
+    color: aliceblue;
+}
+
+p {
+    color: aliceblue;
+}
+ h4 {
+    color: aliceblue;
+ }
+
+ ul li{
+    color: aliceblue;
+ }
