--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,20 @@
 body {
     background-color: #750b40;
     font-family: Verdana, arial, helvetica;
+    font-size: 18px;
     padding: 0 0 0 2rem;
 }
 
-body h1 {
+body header img {
+    width: 150px;
+    height: 150px;
+    float: auto;
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+body h5 {
     margin: 0;
     color: rgb(215, 221, 227);
 }
