--- a/css/main.css
+++ b/css/main.css
@@ -15,13 +15,6 @@ body header img {
   border: 0;
 }
 
-img {
-  width: 300px;
-  height: 200px;
-  float: left;
-  margin-right: 10px;
-}
-
 h1,
 h2,
 h3,
@@ -44,21 +37,35 @@ body header nav a.active {
   text-decoration: none;
 }
 
-.footer_box {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: orange !important;
-  padding: 2px;
-  
+.box {
+  border: 1px solid hsl(0, 50%, 99%);
+  padding: 10px;
+  margin-bottom: 20px;
 }
+
+h2 {
+  font-size: 30px;
+  color: orange;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 footer {
 	padding: 1rem 5%;
 	display: flex;
 	gap: 1rem;
 	font-size: 1.4rem;
 	align-items: center;
+
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: orange !important;
+  padding: 2px;
 }
 
 footer p {
@@ -66,8 +73,9 @@ footer p {
 }
 
 footer img {
-	width: 40%;
-	border-radius: 100%;
+	width: 10vh;
+	border-radius: 50%;
 	aspect-ratio: 1/1;
+  margin-left: 10vw;
 }
 
