--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,15 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-color: #750b40;
   font-family: Verdana, arial, helvetica;
   font-size: 20px;
   color: aliceblue;
-  padding: 0 0 0 2rem;
+  padding: 2rem 2rem 6rem 2rem;
 }
 
 body header img {
@@ -26,6 +32,10 @@ li,
 p,
 a {
   color: aliceblue;
+}
+
+h2 {
+  padding: 2vh 0;
 }
 
 body header nav a {
