--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,13 @@ body header img {
   width: 150px;
 }
 
+h1 {
+padding-bottom: 2vh;
+margin-left: 3vh;
+background-color: orange;
+
+}
+
 .borger_menu {
 width: 40px;
 height: 40px;
@@ -113,12 +120,12 @@ footer {
 	gap: 1rem;
 	font-size: 1.4rem;
 	align-items: center;
-
   position: fixed;
-  left: 0;
+  right: 0;
+  left: 5%;
   bottom: 0;
-  width: 100%;
-  background-color: orange !important;
+  width: 90%;
+  background-color: rgba(71, 108, 14, 0.869);
   padding: 2px;
 }
 
