--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -21,32 +21,37 @@ body header img {
 }
 
 h1 {
-padding-bottom: 2vh;
-margin-left: 3vh;
-background-color: orange;
-
+  padding: 2vh;
+  background-color: orange;
+  margin-bottom: 1rem;
 }
 
+h2 {
+  font-size: 30px;
+  color: orange;
+  margin-bottom: 2rem;
+}
 .borger_menu {
-width: 40px;
-height: 40px;
-background-color: orange;
+  width: 40px;
+  height: 40px;
+  background-color: orange;
 }
-
 
 .nave_menu {
-  display:flex;
-gap:  3vh;
-  padding: 0 2rem;
+  display: flex;
+  gap: 3vh;
+  align-items: center;
+  margin-bottom: 1rem;
 }
+
 nav {
   display: none;
 }
-@media screen and (min-width: 768px){
+@media screen and (min-width: 768px) {
   nav {
     display: flex;
   }
-  
+
   .borger_menu {
     display: none;
   }
@@ -73,10 +78,6 @@ a {
   color: aliceblue;
 }
 
-h2 {
-  padding: 2vh 0;
-}
-
 body header nav a {
   color: #f7b00b;
   text-decoration: none;
@@ -92,18 +93,15 @@ body header nav a.active {
   margin-bottom: 20px;
 }
 
-h2 {
-  font-size: 30px;
-  color: orange;
-}
-
 img {
   max-width: 100%;
   height: auto;
 }
 
-.box, p, h4 {
-padding-bottom: 2rem;
+.box,
+p,
+h4 {
+  padding-bottom: 2rem;
 }
 
 ol {
@@ -111,15 +109,15 @@ ol {
 }
 
 video {
-width: 100%;
-max-width: 700px;
+  width: 100%;
+  max-width: 700px;
 }
 footer {
-	padding: 1rem 5%;
-	display: flex;
-	gap: 1rem;
-	font-size: 1.4rem;
-	align-items: center;
+  padding: 1rem 5%;
+  display: flex;
+  gap: 1rem;
+  font-size: 1.4rem;
+  align-items: center;
   position: fixed;
   right: 0;
   left: 5%;
@@ -130,13 +128,12 @@ footer {
 }
 
 footer p {
-	color: #ffffff;
+  color: #ffffff;
 }
 
 footer img {
-	width: 10vh;
-	border-radius: 50%;
-	aspect-ratio: 1/1;
+  width: 10vh;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
   margin-left: 10vw;
 }
-
